--- a/Assets/UI/Overlay/GameOverlay.uxml
+++ b/Assets/UI/Overlay/GameOverlay.uxml
@@ -1,7 +1,9 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="False">
-    <ui:VisualElement name="Top" style="flex-grow: 1; width: 100%; height: 25%;" />
-    <ui:VisualElement name="Mid" style="flex-grow: 1; width: 100%; height: 50%;" />
-    <ui:VisualElement name="Bot" style="flex-grow: 1; width: 100%; height: 25%;">
-        <ui:VisualElement name="TowerBar" style="width: 75%; height: 75%; position: absolute; left: 12.5%; top: 12.5%; flex-direction: row; align-items: center; justify-content: center; align-self: center; max-width: 75%; min-width: 75%; max-height: 75%; min-height: 75%; flex-grow: 1;" />
+    <ui:VisualElement name="RootElement" style="flex-grow: 1; width: 100%; height: 100%;">
+        <ui:VisualElement name="Top" style="flex-grow: 1; width: 100%; height: 25%;" />
+        <ui:VisualElement name="Mid" style="flex-grow: 1; width: 100%; height: 50%;" />
+        <ui:VisualElement name="Bot" style="flex-grow: 1; width: 100%; height: 25%;">
+            <ui:VisualElement name="TowerBar" style="width: 75%; height: 75%; position: absolute; left: 12.5%; top: 12.5%; flex-direction: row; align-items: center; justify-content: center; align-self: center; max-width: 75%; min-width: 75%; max-height: 75%; min-height: 75%; flex-grow: 1;" />
+        </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
