--- a/Assets/UI/Overlay/GameOverlay.uxml
+++ b/Assets/UI/Overlay/GameOverlay.uxml
@@ -2,14 +2,15 @@
     <ui:VisualElement name="RootElement" style="flex-grow: 1; width: 100%; height: 100%;">
         <ui:VisualElement name="Top" style="flex-grow: 1; width: 100%; height: 25%; flex-direction: row;">
             <ui:VisualElement name="TopLeft" style="flex-grow: 1; justify-content: center; align-items: center; align-self: center; width: 25%; height: 100%; position: absolute;">
-                <ui:Button text="TestButton" parse-escape-sequences="true" display-tooltip-when-elided="true" name="TestButton" style="width: 70%; height: 70%;" />
+                <ui:Button text="NextWave" parse-escape-sequences="true" display-tooltip-when-elided="true" name="NextWaveButton" style="width: 70%; height: 70%; font-size: 45px;" />
             </ui:VisualElement>
             <ui:VisualElement name="TopMid" style="flex-grow: 1; justify-content: center; align-items: center; align-self: center; width: 50%; height: 100%; position: absolute; left: 25%;" />
             <ui:VisualElement name="TopRight" style="flex-grow: 1; justify-content: center; align-items: center; align-self: center; width: 25%; height: 100%; position: absolute; right: 0;">
                 <ui:VisualElement name="MoneyTab" style="flex-grow: 1; width: 100%; height: 30%; position: absolute; top: 0; flex-direction: row;">
                     <ui:VisualElement name="CoinIcon" style="flex-grow: 1; position: absolute; left: 0; width: 20%; height: 100%; background-image: url(&apos;project://database/Assets/Art/coin_icon.png?fileID=2800000&amp;guid=056f62eb12791c447a6d82ddcec89f5b&amp;type=3#coin_icon&apos;); -unity-background-scale-mode: scale-to-fit;" />
-                    <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" name="MoneyCount" style="position: absolute; left: 20%; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; width: 80%; height: 100%; font-size: 75px;" />
+                    <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" name="MoneyCount" style="position: absolute; left: 20%; margin-top: 0; margin-right: 0; margin-bottom: 0; margin-left: 0; padding-top: 0; padding-right: 0; padding-bottom: 0; padding-left: 0; width: 80%; height: 100%; font-size: 53px; -unity-text-align: middle-left;" />
                 </ui:VisualElement>
+                <ui:VisualElement name="HeartsContainer" style="flex-grow: 1; position: absolute; left: 0; bottom: 0; width: 100%; height: 70%; flex-direction: row; align-items: center; justify-content: center; align-self: center;" />
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="Mid" style="flex-grow: 1; width: 100%; height: 50%;" />
