--- a/Assets/UI/Overlay/GameOverlay.uxml
+++ b/Assets/UI/Overlay/GameOverlay.uxml
@@ -4,7 +4,9 @@
             <ui:VisualElement name="TopLeft" style="flex-grow: 1; justify-content: center; align-items: center; align-self: center; width: 25%; height: 100%; position: absolute;">
                 <ui:Button text="NextWave" parse-escape-sequences="true" display-tooltip-when-elided="true" name="NextWaveButton" style="width: 70%; height: 70%; font-size: 45px;" />
             </ui:VisualElement>
-            <ui:VisualElement name="TopMid" style="flex-grow: 1; justify-content: center; align-items: center; align-self: center; width: 50%; height: 100%; position: absolute; left: 25%;" />
+            <ui:VisualElement name="TopMid" style="flex-grow: 1; justify-content: center; align-items: center; align-self: center; width: 50%; height: 100%; position: absolute; left: 25%;">
+                <ui:Label tabindex="-1" text="Wave: 0" parse-escape-sequences="true" display-tooltip-when-elided="true" style="width: 50%; height: 40%; position: absolute; top: 0; left: 25%; font-size: 70px; -unity-text-align: middle-center;" />
+            </ui:VisualElement>
             <ui:VisualElement name="TopRight" style="flex-grow: 1; justify-content: center; align-items: center; align-self: center; width: 25%; height: 100%; position: absolute; right: 0;">
                 <ui:VisualElement name="MoneyTab" style="flex-grow: 1; width: 100%; height: 30%; position: absolute; top: 0; flex-direction: row;">
                     <ui:VisualElement name="CoinIcon" style="flex-grow: 1; position: absolute; left: 0; width: 20%; height: 100%; background-image: url(&apos;project://database/Assets/Art/coin_icon.png?fileID=2800000&amp;guid=056f62eb12791c447a6d82ddcec89f5b&amp;type=3#coin_icon&apos;); -unity-background-scale-mode: scale-to-fit;" />
