--- a/Assets/UI/MainMenu/MainMenu.uxml
+++ b/Assets/UI/MainMenu/MainMenu.uxml
@@ -6,7 +6,8 @@
     <ui:VisualElement name="Buttons" style="flex-grow: 1; position: absolute; top: 20%; left: 0; width: 100%; height: 70%;">
         <ui:Label tabindex="-1" text="START" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Start" class="selectButtons" style="position: absolute; width: 100%; top: 10%;" />
         <ui:Label tabindex="-1" text="UNLOCK TOWERS" parse-escape-sequences="true" display-tooltip-when-elided="true" name="UnlockTowers" class="selectButtons" style="position: absolute; top: 35%; width: 100%;" />
-        <ui:Label tabindex="-1" text="EXIT" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Exit" class="selectButtons" style="position: absolute; bottom: 30%; width: 100%;" />
+        <ui:Label tabindex="-1" text="ACHIEVEMENTS" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Achievements" class="selectButtons" style="position: absolute; top: 50%; width: 100%;" />
+        <ui:Label tabindex="-1" text="EXIT" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Exit" class="selectButtons" style="position: absolute; bottom: 20%; width: 100%;" />
     </ui:VisualElement>
     <ui:VisualElement name="Bot" style="flex-grow: 1; position: absolute; bottom: 0; width: 100%; height: 10%;">
         <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Highscore" class="staticLabels" style="width: 40%; height: 80%; position: absolute; top: 0; left: 0; font-size: 45px;" />
