--- a/Assets/UI/MainMenu/MainMenu.uxml
+++ b/Assets/UI/MainMenu/MainMenu.uxml
@@ -11,6 +11,6 @@
     </ui:VisualElement>
     <ui:VisualElement name="Bot" style="flex-grow: 1; position: absolute; bottom: 0; width: 100%; height: 10%;">
         <ui:Label tabindex="-1" text="Label" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Highscore" class="staticLabels" style="width: 40%; height: 80%; position: absolute; top: 0; left: 0; font-size: 45px;" />
-        <ui:Button text="Reset Highscore" parse-escape-sequences="true" display-tooltip-when-elided="true" name="TestButton" style="position: absolute; right: 0;" />
+        <ui:Button text="test" parse-escape-sequences="true" display-tooltip-when-elided="true" name="TestButton" style="position: absolute; right: 0;" />
     </ui:VisualElement>
 </ui:UXML>
