balanced the game a bit

--- a/Assets/UI/MainMenu/Achievements.uxml
+++ b/Assets/UI/MainMenu/Achievements.uxml
@@ -20,9 +20,21 @@
                 </ui:VisualElement>
             </ui:VisualElement>
             <ui:VisualElement name="Right" style="flex-grow: 1; position: absolute; right: 0; height: 100%; width: 50%; align-items: center; justify-content: center; align-self: center;">
-                <ui:VisualElement name="VisualElement" class="achievement" />
-                <ui:VisualElement name="VisualElement" class="achievement" />
-                <ui:VisualElement name="VisualElement" class="achievement" />
+                <ui:VisualElement name="FlameArrow" class="achievement">
+                    <ui:Label tabindex="-1" text="Unlock Flame Arrow Tower" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Title" class="achievementLabel" />
+                    <ui:VisualElement name="Image" class="achievementImage" style="flex-grow: 1; background-image: url(&apos;project://database/Assets/Art/mugshots/green_hat.png?fileID=2800000&amp;guid=361891aedce79f64b8dc484f3ed3b117&amp;type=3#green_hat&apos;);" />
+                    <ui:ProgressBar value="22" name="Progress" />
+                </ui:VisualElement>
+                <ui:VisualElement name="MagicArrow" class="achievement">
+                    <ui:Label tabindex="-1" text="Unlock Magic Arrow Tower" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Title" class="achievementLabel" />
+                    <ui:VisualElement name="Image" class="achievementImage" style="flex-grow: 1; background-image: url(&apos;project://database/Assets/Art/mugshots/green_hat.png?fileID=2800000&amp;guid=361891aedce79f64b8dc484f3ed3b117&amp;type=3#green_hat&apos;);" />
+                    <ui:ProgressBar value="22" name="Progress" />
+                </ui:VisualElement>
+                <ui:VisualElement name="FlameWizard" class="achievement">
+                    <ui:Label tabindex="-1" text="Unlock Flame Wizard Tower" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Title" class="achievementLabel" />
+                    <ui:VisualElement name="Image" class="achievementImage" style="flex-grow: 1; background-image: url(&apos;project://database/Assets/Art/mugshots/green_hat.png?fileID=2800000&amp;guid=361891aedce79f64b8dc484f3ed3b117&amp;type=3#green_hat&apos;);" />
+                    <ui:ProgressBar value="22" name="Progress" />
+                </ui:VisualElement>
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:Label tabindex="-1" text="Back" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Back" class="selectButtons" style="width: 70%; height: 10%; position: absolute; bottom: 5%; left: 15%;" />
