--- a/Assets/UI/Overlay/GameOverlay.uxml
+++ b/Assets/UI/Overlay/GameOverlay.uxml
@@ -18,7 +18,8 @@
             </ui:VisualElement>
         </ui:VisualElement>
         <ui:VisualElement name="Mid" style="flex-grow: 1; width: 100%; height: 45%; position: absolute; top: 30%;">
-            <ui:Button text="Button" parse-escape-sequences="true" display-tooltip-when-elided="true" name="TestButton" style="width: 19%; height: 25%;" />
+            <ui:Label tabindex="-1" text="Restart" parse-escape-sequences="true" display-tooltip-when-elided="true" name="Restart" class="selectButtons" style="display: none;" />
+            <ui:Label tabindex="-1" text="Back to Main Menu" parse-escape-sequences="true" display-tooltip-when-elided="true" name="MainMenu" class="selectButtons" style="display: none;" />
         </ui:VisualElement>
         <ui:VisualElement name="Bot" style="flex-grow: 1; width: 100%; height: 25%; position: absolute; bottom: 0;">
             <ui:VisualElement name="TowerBar" style="width: 75%; height: 75%; position: absolute; left: 12.5%; top: 12.5%; flex-direction: row; align-items: center; justify-content: center; align-self: center; max-width: 75%; min-width: 75%; max-height: 75%; min-height: 75%; flex-grow: 1;" />
